# Thesis_Nabil_Nachabe

./: README.md
Acadosexamples/getting_started/: acados_ocp_nlp.json  simulink_model_advanced_closed_loop.slxc
Acadosexamples/linear_mpc/: acados_ocp_nlp.json
Acadosexamples/linear_mpc/c_generated_code/: CMakeCache.txt  CMakeLists.txt  Makefile  acados_mex_create_quad_mpc.c  acados_mex_create_quad_mpc.mexw64  acados_mex_free_quad_mpc.c  acados_mex_free_quad_mpc.mexw64  acados_mex_set_quad_mpc.c  acados_mex_set_quad_mpc.mexw64  acados_mex_solve_quad_mpc.c  acados_mex_solve_quad_mpc.mexw64  acados_ocp_solver_quad_mpc.lib  acados_sim_solver_quad_mpc.c  acados_sim_solver_quad_mpc.h  acados_sim_solver_sfunction_quad_mpc.c  acados_solver_quad_mpc.c  acados_solver_quad_mpc.h  acados_solver_sfunction_quad_mpc.c  cmake_install.cmake  main_mex_quad_mpc.c  main_quad_mpc.c  main_sim_quad_mpc.c  make_main_mex_quad_mpc.m  make_mex_quad_mpc.m  make_sfun.m  make_sfun_sim.m  quad_mpc_mex_solver.m
Acadosexamples/linear_mpc/c_generated_code/quad_mpc_constraints/: quad_mpc_constraints.h
Acadosexamples/linear_mpc/c_generated_code/quad_mpc_cost/: quad_mpc_cost.h  quad_mpc_cost_ext_cost_0_fun.c  quad_mpc_cost_ext_cost_0_fun_jac.c  quad_mpc_cost_ext_cost_0_fun_jac_hess.c  quad_mpc_cost_ext_cost_e_fun.c  quad_mpc_cost_ext_cost_e_fun_jac.c  quad_mpc_cost_ext_cost_e_fun_jac_hess.c  quad_mpc_cost_ext_cost_fun.c  quad_mpc_cost_ext_cost_fun_jac.c  quad_mpc_cost_ext_cost_fun_jac_hess.c
Acadosexamples/linear_mpc/c_generated_code/quad_mpc_model/: quad_mpc_dyn_disc_phi_fun.c  quad_mpc_dyn_disc_phi_fun_jac.c  quad_mpc_dyn_disc_phi_fun_jac_hess.c  quad_mpc_model.h
Acadosexamples/pendulum_on_cart_model/: acados_ocp_nlp.json  acados_sim.json  (+1 more)
BILO/: CBF_actual_TEST.m  CBF_fake_2cars.m  Car_Obstacle_avoidance.m  EExternal_COstfunction_test.m  External_COST_NEW_TESTING.m  NAYEM_TEST_coll_avoidance.m  NEWNEWDyanmcis_test_onecar.m  New_testin_MPC_oneCar.m  Penalty_Term_append.m  Scenario1car_DiagonalLine_MPC.m  Scenario1car_StraightLine.m  Scenario2cars_diagonal.m  ScenarioNew.asv  ScenarioNew_coll_constr.m  Scenario_straightline_MPC.asv  Sigmoidal_fake_2cars.m  TEST_coll_avoidance  example_closed_loop.m  example_ocp.m  example_sim.m  kinematic_double_track_model_twocars.m  kinematic_single_track_model.m  kinematic_single_track_model_external.m  kinematic_single_track_model_with_acceleration.m  kinematic_single_track_model_with_acceleration_and_steering_rat.m  newDynamics_test_onecar.m  twocarsstraightLine.m
Entropic_Risk_averse_Formulation/: DYNtwocarExternal.m  DYNtwocarExternal11.m  DYNtwocarExternalCoupling.m  DYNtwocarExternal_Perpendicular.m  DYNtwocarExternal_Perpendicular1.m  DYNtwocarExternal_Perpendicular11.m  DYNtwocarExternal_Perpendicular11_new.m  Lane_Merging.m  Plot.m  Straight_PerpendicularScenario.m  plotMinDistance.m
FourVehicleJunction_Potential/: DYNFourcarExternalCoupling.m  DYNFourcarExternalCoupling_2.m  DYNFourcarExternalCoupling_3.m  Lane_4veh_juntion.m  NO_COOL_ANIMATION_4veh_Junction_Complex.m  No_TEST_ARCS_FourVeh.m  No_untitled.m  Plot_Traj_Template_good.m  Traj_Plot_Template2.m  WAY1_new.m  WAY2.m  WAY2_new.m  WAY3.m  WAY3_new.m  WAY4.m  WAY4_new.m  Way1.m  YES_FourVeh_Junction.m  plotMinDistance.m
IPOPT_InverseOptimization/: IPOPT.m  Khara1.m  Khara2.m  Lagrangian.m  MPC_IPOPT.m  MPC_IPOPT_2.m  New_khara_2_added_collAvoidanceCon.m  Preliminary_Particle_Filter.m  References.mat  TEST.m  Tink_ParticleFilter.m  Way_IPOPT.m  Way_IPOPT1.m  X_star.mat  computeLikelihood.m  computeObservedCost.m  computeObservedCost1.m  findClosestPoint.m  observations.mat  runMPC.m  systematicResample.m
New_work_Static_obstacle/: CBF_onecar_stationaryObs_30_05.m  FourVeh_Junction.m  Rectangular_Constraint_oneCar.m  evaluate_CBF.m  kinematic_single_track_model_with_acceleration_and_steering_rat.m
New_work_dynamic_obstacle/: DYNforNE_Check.m  DYNtwocar.m  DYNtwocarExternalCoupling.m  EXTERNAL_COUPLING.m  EXTERNAL_POTENTIAL.m  Moving_Obstacle_One_Car.m  NE_CHECK.m  NO_TEST_JUNE_Second.m  NO_TEST_JUNE_Third_Potential.m  Plotting_2Agents_Diagonal.m  Plotting_2Agents_Lane_merging.m  Plotting_2Agents_Straights.m  Spline.m  TESTTTT.asv  TEST_30_05_TEST_stationaryObstacle.m  TEST_June(ensa).m  Traj_Plot_Template1.m  Traj_Plot_Template2.m  YES_Potential_GAME_2carsStraight.m  Yes_diag_PotentialGame_2.m  moving_obstacle_dynamics.m  newdyn.m
OnlineLearning_twoPotGames_Roundabout/: Frenel.m  MainCode_ParticleFilter.m  OCP_solve.m  Roundabout_2cars.m  SettingUp.m  Sim_traj.mat  W2.m  W2_new.m  W3.m  W3_new.m  computeLikelihoodWithControl.m  createDrivingScenario.m  particleFilter.m  plotRoundaboutWithLanes.m  predictTrajectories.m  untitled.m  untitled2.m
SFunctionsTinkering/: Good_1PF_Template_Copy.slx  My_Template.slx
Simplifying_Model_NE_Check/: DYNforNE_Check.m  DYNtwocarExternalCoupling.m  EXTERNAL_COUPLING.m  IPOPT_solver.asv  IPOPT_solver.m  Lanes.m  NE_CHECK.m  SHIT_IPOPT.m  Tinkering_IBR_Homotopy_Regulirzation.m  Traj_NEW.mat  YES_IBR.m  YES_Pre_IBR.m  YES_Straight_IBR.m  YES_Straight_Lines.m
Tinkering_Junction_Roundabout/: DYNFourcarExternalCoupling_3.m  DYNFourcarExternalCoupling_3_test_withrandom.m  DYNFourcar_Newest.m  Dynamics_Roundabout.m  NO_Junction_withExpected.m  Plot_Traj_Template_good.m  Plotting_Roundabout.m  SmallGamma.mat  U_star.mat  W1.m  W2.m  W3.m  W4.m  WAY1_new.m  With_Slack.m  YES_Roundabout.m  YES_TEST_ARCS_FourVeh.m  big_gamma.mat  plotMinDistance.m  plotRoundaboutWithLanes.m
Two_ParticleFilters/: MainCode_ParticleFilter.m  MainCode_ParticleFilter_New.m  MainCode_ParticleFilter_Typical.m  Mos_Appraoach.m  OCP_solve.m  Roundabout_2cars.m  SettingUp.m  Sim_traj.mat  W2_new.m  W3_new.m  Weights_plot_comparaison.m  computeLikelihoodWithControl_noisy.m  customSettingUp.m  customparticleFilter.m  plotRoundaboutWithLanes.m  plotWeightPDF.m  predictTrajectories.m  w_evol_new.mat  w_evol_old.mat
Verifyingof_NashEquilibrium/: DYNforNE_Check.m  DYNtwocarExternal.m  DYNtwocarExternalCoupling.m  EXTERNAL_COUPLING.m  NE_CHECK.m  Traj_openLoop.mat  Traj_openLoop_New.mat  Way.m
(+1398 files in other folders)
